<resources>
    <string name="app_name">RetrofitDemo</string>
    <string name="login">login</string>
    <string name="getdepgroup">GetDepGroup</string>
    <string name="getcdr">GetCdr</string>
    <string name="next">next</string>
    <string name="hello">hello!</string>
    <string name="loginmsg">login msg</string>
    <string name="english">english</string>
    <string name="chinese">chinese</string>
    <string name="login_failed">login failed!</string>

    <string name="SMS_Code">SMS Code</string>
    <string name="get">Get</string>
</resources>
