<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/github_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello" />

        <TextView
            android:id="@+id/cdrText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button"
            android:layout_marginTop="50dp"
            android:text="@string/next" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button6"
            android:layout_alignBottom="@+id/button6"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/english"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/athena"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:text="雅典娜登录测试,进阶版请求,增加了拦截器设置!!" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/button3"
            android:layout_toStartOf="@+id/button3"
            android:text="GetGitHub"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/github_name"
            android:layout_alignBottom="@+id/github_name"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="ScrollList"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/athena"
            android:text="@string/login"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button4"
            android:layout_alignEnd="@+id/button5"
            android:layout_alignRight="@+id/button5"
            android:layout_marginBottom="12dp"
            android:layout_marginEnd="15dp"
            android:layout_marginRight="15dp"
            android:text="@string/getcdr"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button5"
            android:layout_alignLeft="@+id/advance_retrofit"
            android:layout_alignStart="@+id/advance_retrofit"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:text="@string/getdepgroup"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/customer_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/button6"
            android:layout_toEndOf="@+id/advance_retrofit"
            android:layout_toRightOf="@+id/advance_retrofit"
            android:text="自定义Dialog"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/litepal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:text="LitePal 数据库"
            android:textAllCaps="false"
            android:layout_below="@+id/button5"
            android:layout_alignLeft="@+id/vectorAnimate"
            android:layout_alignStart="@+id/vectorAnimate" />

        <Button
            android:id="@+id/nice_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Retrofit干货集中营"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            android:layout_alignBaseline="@+id/litepal"
            android:layout_alignBottom="@+id/litepal"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/vectorAnimate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="矢量图动画只支持5.0+"
            android:layout_below="@+id/litepal"
            android:layout_toLeftOf="@+id/button"
            android:layout_toStartOf="@+id/button" />

        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="登录"
            android:layout_below="@+id/nice_retrofit"
            android:layout_alignRight="@+id/athena"
            android:layout_alignEnd="@+id/athena" />

        <Button
            android:id="@+id/dialog_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="转账弹出验证码输入框"
            android:layout_below="@+id/login"
            android:layout_alignLeft="@+id/athena"
            android:layout_alignStart="@+id/athena" />

        <Button
            android:id="@+id/advance_retrofit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="retrofit进阶,目前有问题"
            android:textAllCaps="false"
            android:layout_below="@+id/login"
            android:layout_toRightOf="@+id/dialog_edit"
            android:layout_toEndOf="@+id/dialog_edit" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:text="@string/chinese"
            android:textAllCaps="false"
            android:layout_below="@+id/button3"
            android:layout_toLeftOf="@+id/advance_retrofit"
            android:layout_toStartOf="@+id/advance_retrofit" />

    </RelativeLayout>
</ScrollView>